# scout-ugv

./: ouster_net.sh  sensor_launch.sh
octomap_server2/launch/: octomap_server_launch.py
ouster-ros/ouster-ros/config/: driver_params.yaml
ouster-ros/ouster-ros/launch/: sensor.composite.launch.xml
pointcloud_to_laserscan-humble/launch/: sample_pointcloud_to_laserscan_launch.py
realsense-ros/realsense2_camera/launch/: rs_launch.py
scout_navigation/: CMakeLists.txt  my_map.pgm  my_map.yaml  package.xml  setup.cfg  setup.py
scout_navigation/config/: ekf.yaml  nav2_2d_params.yaml  rviz_config.rviz  slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml
scout_navigation/launch/: ekf.launch.py  lidar_detection.launch.py  nav2_2d.launch.py  nav2_3d_stvl.launch.py  rviz_launch.py  slam_toolbox_localization.launch.py  slam_toolbox_mapping.launch.py
scout_navigation/maps/: .yaml  maps.yaml
scout_navigation/scout_navigation/: lidar_processing_node.py
scout_ros2/scout_base/launch/: scout_mini_base.launch.py
scout_ros2/scout_description/launch/: scout_base_description.launch.py
zinger_nav/config/: custom_navigate_through_poses_w_replanning_and_recovery.xml  localization.yaml  nav2.yaml  optimized_nav2.yaml  rr.rviz  rviz_config.rviz  slam.yaml
zinger_nav/launch/: localization.launch.py  nav2.launch.py  slam.launch.py
zinger_nav/maps/: map_1750742084.pgm  map_1750742084.yaml
