<?xml version="1.0"?>
<package format="3">
  <name>scout_navigation</name>
  <version>0.0.1</version>
  <description>Scout navigation package with SLAM, 2D/3D navigation, and object detection</description>
  
  <!-- Maintainer Information -->
  <maintainer email="your.email@example.com">Your Name</maintainer>
  
  <!-- License Information -->
  <license>Apache License 2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>stvl_layer</depend>
  <depend>tf2_ros</depend>

  <!-- Additional Dependencies for Object Detection -->
  <depend>ultralytics</depend>
  <depend>opencv-python</depend>
  <depend>Pillow</depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <!-- Export Python build information -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

